# VirtualMemorySimulator

./: CMakeLists.txt  README.md  main.cpp
Classes/: Controller.cpp  Controller.h  FifoQueue.cpp  FifoQueue.h  Instruction.cpp  Instruction.h  LRUQueue.cpp  LRUQueue.h  Page.cpp  Page.h  Pages.cpp  Pages.h  PaginationTable.cpp  PaginationTable.h  Process.cpp  Process.h  ProcessPaginationTable.cpp  ProcessPaginationTable.h  RealMemory.cpp  RealMemory.h  ReplacementQueue.cpp  ReplacementQueue.h  SecondaryMemory.cpp  SecondaryMemory.h  Status.cpp  Status.h  dummy.cpp  dummy.h
